# SlotMachineOGS

./: CMakeLists.txt  LICENCE.md  README.md
.github/workflows/: linux_builds.yml  windows_builds.yml
binary/linux/executor/: SlotMachineOGS
cmake/: FindBZip2.cmake  FindBrotli.cmake  FindFreetype.cmake  FindOgg.cmake  FindOpenAL.cmake  FindPNG.cmake  FindSFML.cmake  FindVorbis.cmake  FindZLIB.cmake  Findflac.cmake  Findopengl_system.cmake  Findstb.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
include/: config.h
include/Backend/: show_result.h  spin.h  spining_slots.h  state_context.h  state_machine.h  timer.h  waiting_player.h
include/Controller/: controller.h  pk_controller.h
include/Facades/: game.h
include/Graphics/: graphic_objects.h  rendering_element.h
include/Model/: model.h
include/View/: display.h  window.h
scripts/: conanfile.py
src/: config.cpp  main.cpp
src/Backend/: show_result.cpp  spin.cpp  spining_slots.cpp  state_context.cpp  state_machine.cpp  timer.cpp  waiting_player.cpp
src/Controller/: controller.cpp  pk_controller.cpp
src/Facades/: game.cpp
src/Graphics/: graphic_objects.cpp  rendering_element.cpp
src/Model/: model.cpp
src/View/: display.cpp  window.cpp
tests/: main_t.cpp
